--- a/bin/qemu-or1k/Cargo.toml
+++ b/bin/qemu-or1k/Cargo.toml
@@ -2,8 +2,10 @@
 name = "qemu-or1k"
 version = "0.1.0"
 edition = "2021"
+description = "QEMU binary installer for qemu-or1k"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 memfd-exec = "0.1.4"
+qemu = { version = "0.1.3", features = ["qemu-or1k"] }
