--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "qemu"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 description = "QEMU binary and utility installer"
 license = "MIT"
+repository = "https://github.com/novafacing/qemu-rs.git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
