--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 description = "QEMU binary and utility installer"
 license = "MIT"
 repository = "https://github.com/novafacing/qemu-rs.git"
+keywords = ["emulation", "qemu", "emulator"]
+categories = ["emulators"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
