--- a/Makefile.toml
+++ b/Makefile.toml
@@ -57,3 +57,29 @@ fn main() {
     }
 }
 '''
+
+[tasks.publish-binaries]
+script_runner = "@rust"
+cwd = "binaries"
+script = '''
+//! ```cargo
+//! [dependencies]
+//! ```
+use std::process::Command;
+use std::fs::read_dir;
+use std::path::PathBuf;
+
+fn main() {
+    for dir in read_dir(PathBuf::from(".")).unwrap() {
+        let dir = dir.unwrap();
+        if dir.file_type().unwrap().is_dir() {
+            let path = dir.path();
+            Command::new("cargo")
+                .arg("publish")
+                .current_dir(&path)
+                .status()
+                .unwrap();
+        }
+    }
+}
+'''
