--- a/qemu-plugin-sys/Cargo.toml
+++ b/qemu-plugin-sys/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "qemu-plugin-sys"
-version = "8.1.3"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+authors.workspace = true
+categories.workspace = true
+description = "Low level bindings to the QEMU plugin API"
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+publish.workspace = true
+readme.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [build-dependencies]
 anyhow = "1.0.75"
