--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "qemu-plugin"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+categories.workspace = true
+description = "High level bindings to the QEMU plugin API"
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+publish.workspace = true
+readme.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
 anyhow = "1.0.75"
 once_cell = "1.19.0"
-qemu-plugin-sys = { workspace = true }
+qemu-plugin-sys.workspace = true
 thiserror = "1.0.51"
