--- a/qemu/Cargo.toml
+++ b/qemu/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "qemu"
-version = "8.1.3-rc1"
-edition = "2021"
-description = "QEMU binary and utility installer"
-license = "MIT"
-repository = "https://github.com/novafacing/qemu-rs.git"
-keywords = ["emulation", "qemu", "emulator"]
-categories = ["emulators"]
+authors.workspace = true
+categories.workspace = true
+description = "QEMU binary installer"
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+publish.workspace = true
+readme.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [[bin]]
 name = "qemu-aarch64"
