--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
             libpixman-1-dev zlib1g-dev ninja-build
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build --verbose --features=binaries,plugins,lto
+        run: cargo build --verbose --features=binaries,plugins
