--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ members = [
 [workspace.dependencies]
 qemu-plugin-sys = { version = "8.1.3-v2", path = "qemu-plugin-sys" }
 qemu-plugin = { version = "8.1.3-v2", path = "qemu-plugin" }
-qemu = { path = "qemu" }
+qemu = { version = "8.1.3-v2", path = "qemu" }
