--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -16,3 +16,7 @@ anyhow = "1.0.75"
 once_cell = "1.19.0"
 qemu-plugin-sys = { version = "8.1.3-v3", workspace = true }
 thiserror = "1.0.51"
+
+[features]
+# Define external symbols with weak definitions
+weak = []
