--- a/qemu-plugin/examples/tracer/Cargo.toml
+++ b/qemu-plugin/examples/tracer/Cargo.toml
@@ -20,3 +20,4 @@ clap = { version = "4.4.11", features = ["derive", "string"] }
 typed-builder = "0.18.0"
 serde = { version = "1.0.193", features = ["derive"] }
 memfd-exec = "0.2.1"
+serde_json = "1.0.108"
