--- a/qemu-plugin/examples/tracer/Cargo.toml
+++ b/qemu-plugin/examples/tracer/Cargo.toml
@@ -21,3 +21,4 @@ typed-builder = "0.18.0"
 serde = { version = "1.0.193", features = ["derive"] }
 memfd-exec = "0.2.1"
 serde_json = "1.0.108"
+yaxpeax-x86 = "1.2.2"
