--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         run: |
           sudo apt-get -y install git libglib2.0-dev libfdt-dev \
             libpixman-1-dev zlib1g-dev ninja-build
+      - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/checkout@v3
       - name: Build
         run: cargo build --verbose --features=binaries,plugins
+      - name: Test Tracer
+        run: cargo run -r --bin tracer -- -a /bin/ls -- -lah
