Do not build twice to avoid out of space errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,5 @@ jobs:
             libpixman-1-dev zlib1g-dev ninja-build
       - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose --features=binaries,plugins
-      - name: Test Tracer
+      - name: Build and Test Tracer
         run: cargo run -r --bin tracer -- -a /bin/ls -- -lah
