initial support for making windows plugins
Add initial support for making windows delay-link library which hopefully
we will be able to link against.

qemu-plugins has win_link_hook which does the runtime link-up to the host
qemu.exe.

the tiny example compiles and runs for me now.

No way to access g_free on windows, so we instead leak memory at the moment.

--- a/qemu-plugin-sys/Cargo.toml
+++ b/qemu-plugin-sys/Cargo.toml
@@ -10,3 +10,9 @@ publish.workspace = true
 readme.workspace = true
 repository.workspace = true
 version.workspace = true
+
+[build-dependencies]
+anyhow = "1.0.75"
+
+[lints.rust]
+non_snake_case = "allow"
