--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -18,13 +18,13 @@ qemu-plugin-sys = { version = "8.1.3-v3", workspace = true }
 thiserror = "1.0.51"
 
 [target.'cfg(windows)'.dependencies.windows]
-version ="0.52"
+version = "0.52"
 features = [
     "Win32_System_WindowsProgramming",
     "Win32_System_LibraryLoader",
-    "Win32_Foundation"
+    "Win32_Foundation",
 ]
 
 [features]
 # Define external symbols with weak definitions
-weak = []
+unix-weak-link = []
