Use new weak feature name in examples

--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -26,5 +26,5 @@ features = [
 ]
 
 [features]
-# Define external symbols with weak definitions
+# Define external symbols with weak definition
 unix-weak-link = []
