Update workflow with all dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,11 @@ jobs:
             remove-docker-images: 'true'
       - name: Install QEMU Build Dependencies
         run: |
-          sudo apt-get -y install git libglib2.0-dev libfdt-dev \
-            libpixman-1-dev zlib1g-dev ninja-build
+          sudo apt-get -y update && \
+          sudo apt-get -y install bison flex git curl libglib2.0-dev libfdt-dev \
+          libpixman-1-dev zlib1g-dev ninja-build build-essential python3 python3-pip python3-venv && \
+          python3 -m pip install sphinx sphinx_rtd_theme
       - uses: dtolnay/rust-toolchain@nightly
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build -vv -p tracer
+        run: cargo run -r --bin tracer -- -a /bin/ls -- -lah
