--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - name: Free build space
-      #   uses: easimon/maximize-build-space@master
-      #   with:
-      #       root-reserve-mb: 2048
-      #       temp-reserve-mb: 256
-      #       swap-size-mb: 1024
-      #       remove-dotnet: 'true'
-      #       remove-android: 'true'
-      #       remove-haskell: 'true'
-      #       remove-codeql: 'true'
-      #       remove-docker-images: 'true'
+      - name: Free build space
+        uses: easimon/maximize-build-space@master
+        with:
+            root-reserve-mb: 2048
+            temp-reserve-mb: 256
+            swap-size-mb: 1024
+            remove-dotnet: 'true'
+            remove-android: 'true'
+            remove-haskell: 'true'
+            remove-codeql: 'true'
+            remove-docker-images: 'true'
       - name: Install QEMU Build Dependencies
         run: |
           sudo apt-get -y update && \
