--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           remove-haskell: "true"
           remove-codeql: "true"
           remove-docker-images: "true"
+      - uses: actions/checkout@v4
       - name: Build Test Container
         run: |
           docker build -t qemu-rs-test .
